fixed alignment issues in cert and port

--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -84,7 +84,7 @@ html body {
 }
 
 /* Hide the images by default */
-.mySlides1{
+.mySlides1, .mySlides2, .mySlides3{
   display: none;
   z-index: 1;
 }
@@ -125,8 +125,7 @@ html body {
   background-color: transparent;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1%;
-  padding-right: 1%;
+ 
 }
 
 
@@ -148,17 +147,11 @@ html body {
 
 
 /* Hide the images by default */
-.mySlides1 {
+.mySlides1, .mySlides2, .mySlides3 {
   display: none;
-  padding-left: 5%;
   z-index: 1;
 }
 
-.mainbody .mySlides2 {
-  display: none;
-  padding-left: 5%;
-  z-index: 1;
-}
 
 
 /* Caption text */
